src/objects/PC_email_Notification__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_name__c</fullName>
        <label>Account name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_number__c</fullName>
        <label>Account number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_email__c</fullName>
        <label>Dist email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PC email Notification</label>
</CustomObject>